# distillation-column-simulator

./: .gitignore  ARCHIVE_README.md  BlockMRSL21.f90  GITHUB_SETUP.md  LICENSE  MODULE_INITIALISATION.f90  MODULE_OPERATOIRE.f90  README.md  SUBROUTINES_AFFECTATION.f90  SUBROUTINE_CALCUL_TBULLE.f90  SUBROUTINE_HLIQ.f90  SUBROUTINE_HVAP.f90  SUBROUTINE_METHOD_BLOCK_MRSL21.f90  SUBROUTINE_RESIDU.f90  TESTMAIN.f90  pyproject.toml
.github/workflows/: build.yml
backend/: Makefile  OPERATOIRE.txt  README.md
backend/src/modules/: MODULE_DIMENSION.f90  MODULE_PARAMETRE_THERMO.f90
backend/src/solvers/: MRSL01.f  SUBROUTINE_JACOBIEN_MRSL01.f90  mrsl21.f
backend/src/thermodynamics/: SUBROUTINE_CALCUL_TROSEE.f90  SUBROUTINE_EQUILIBRE.f90  SUBROUTINE_NRTL.f90  SUBROUTINE_PSAT.f90
backend/src/utils/: SUBROUTINE_NORME.f90
config/: ALIMENTATION_PARAMETRE.txt  OPERATOIRE.txt  components.yaml  simulation_config.yaml
config/examples/: ethanol_water.yaml
docs/: UV_GUIDE.md
frontend/: README.md  app.py  requirements.txt
frontend/components/: __init__.py  plots.py  results.py  sidebar.py  thermodynamics.py
python/distillation_wrapper/: __init__.py  config_manager.py  data_processor.py  fortran_interface.py
